# pyshell

./: .gitignore  README.md  pyproject.toml
src/pyshell/: __init__.py  __main__.py
src/pyshell/pyshell/: __init__.py  command_manager.py  completion.py  context.py  executor.py  interpreter.py  key_bindings.py  shell.py
src/pyshell/pyshell/commands/: __init__.py  command.py  exit.py  hello.py  help.py
src/pyshell/pyshell/formatters/: formatter.py
