[project]
name = "pyshell"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Adonis Ling", email = "adonis0147@gmail.com" }
]
dependencies = [
    "prompt-toolkit>=3.0.51",
    "pygments>=2.19.2",
    "tabulate>=0.9.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"pyshell" = "pyshell:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "python-lsp-server[all]>=1.13.0",
    "python-lsp-black>=2.0.0",
    "python-lsp-isort>=0.2.1",
    "pylsp-mypy>=0.7.0",
]

[[tool.rye.sources]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple/"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pyshell"]
