[project]
name = "pyshell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adonis Ling", email = "adonis0147@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "prompt-toolkit>=3.0.52",
    "pygments>=2.19.2",
    "tabulate>=0.9.0",
    "types-pygments>=2.19.0.20250809",
    "types-tabulate>=0.9.0.20241207",
]

[project.scripts]
pyshell = "pyshell:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
index-url = "http://mirrors.aliyun.com/pypi/simple/"

[dependency-groups]
dev = [
    "pylsp-mypy>=0.7.0",
    "python-lsp-black>=2.0.0",
    "python-lsp-isort>=0.2.1",
    "python-lsp-server[all]>=1.13.1",
]
